--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,7 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1.0, user-scalable=no" />
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>PUBG - Radar</title>
+      <title>Communism</title>
       <link rel="stylesheet" href="/index.css">
       <script src="/libs/d3.v4.min.js"></script>
       <script src="/libs/jquery.min.js"></script>
