--- a/static/index.html
+++ b/static/index.html
@@ -14,13 +14,15 @@
       <script src="/utils.js"></script>
       <script src="/radar.js"></script>
       <script src="/index.js"></script>
+      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.3.1/dist/leaflet.css" />
+      <script src="https://unpkg.com/leaflet@1.3.1/dist/leaflet.js"></script>
+      <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.2/dist/leaflet.css" media="screen" title="leaflet">
+      <script src="https://unpkg.com/leaflet@1.0.2/dist/leaflet.js" charset="utf-8"></script>
+      <script src="https://unpkg.com/leaflet.minichart/dist/leaflet.minichart.min.js" charset="utf-8"></script>
 </head>
 
-
 <body>
-      <div class="container">
-            <canvas id="radar"></canvas>
-      </div>
+      <div id="map" class="container"></div>
 </body>
 
 </html>
